# devaluable

./: Cargo.toml  README.md
devaluable/: Cargo.toml
devaluable-macros/: Cargo.toml
devaluable-macros/src/: lib.rs  named_field_visitor.rs  unnamed_field_visitor.rs
devaluable/src/: lib.rs
devaluable/tests/: basic.rs  devaluable.rs  enumerable.rs  option.rs  primitive.rs  structable.rs
